@@ -8,15 +8,23 @@ import kr.modusplant.domains.post.common.util.usecase.model.PostReadModelTestUti
 import kr.modusplant.domains.post.common.util.usecase.request.PostRequestTestUtils;
 import kr.modusplant.domains.post.common.util.usecase.response.PostResponseTestUtils;
 import kr.modusplant.domains.post.domain.aggregate.Post;
+import kr.modusplant.domains.post.domain.exception.EmptyValueException;
 import kr.modusplant.domains.post.domain.exception.PostNotFoundException;
 import kr.modusplant.domains.post.domain.vo.AuthorId;
 import kr.modusplant.domains.post.domain.vo.PostId;
+import kr.modusplant.domains.post.usecase.enums.SearchOption;
+import kr.modusplant.domains.post.usecase.enums.SearchSort;
 import kr.modusplant.domains.post.usecase.port.mapper.PostMapper;
 import kr.modusplant.domains.post.usecase.port.processor.MultipartDataProcessorPort;
 import kr.modusplant.domains.post.usecase.port.repository.*;
+import kr.modusplant.domains.post.usecase.record.ContentProcessRecord;
 import kr.modusplant.domains.post.usecase.record.DraftPostReadModel;
 import kr.modusplant.domains.post.usecase.record.PostSummaryReadModel;
+import kr.modusplant.domains.post.usecase.record.PostSummaryWithSearchInfoReadModel;
 import kr.modusplant.domains.post.usecase.request.PostCategoryRequest;
+import kr.modusplant.domains.post.usecase.request.PostInsertRequest;
+import kr.modusplant.domains.post.usecase.request.PostSearchRequest;
+import kr.modusplant.domains.post.usecase.request.PostUpdateRequest;
 import kr.modusplant.domains.post.usecase.response.*;
 import kr.modusplant.framework.aws.service.S3FileService;
 import org.junit.jupiter.api.BeforeEach;
@@ -35,9 +43,13 @@ import java.util.UUID;
 
 import static kr.modusplant.domains.post.common.constant.PostJsonNodeConstant.*;
 import static kr.modusplant.domains.post.common.constant.PostUlidConstant.TEST_POST_ULID;
+import static kr.modusplant.domains.post.common.util.usecase.model.PostWithSearchInfoReadModelTestUtils.TEST_POST_SUMMARY_WITH_SEARCH_INFO_READ_MODEL_NULL;
+import static kr.modusplant.shared.persistence.common.util.constant.CommPostConstant.TEST_COMM_POST_PUBLISHED_AT;
+import static kr.modusplant.shared.persistence.common.util.constant.CommPrimaryCategoryConstant.TEST_COMM_PRIMARY_CATEGORY_ID;
 import static kr.modusplant.shared.persistence.common.util.constant.SiteMemberConstant.MEMBER_BASIC_USER_UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.willDoNothing;
@@ -53,8 +65,9 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     private final PostViewLockRepository postViewLockRepository = Mockito.mock(PostViewLockRepository.class);
     private final PostArchiveRepository postArchiveRepository = Mockito.mock(PostArchiveRepository.class);
     private final PostRecentlyViewRepository postRecentlyViewRepository = Mockito.mock(PostRecentlyViewRepository.class);
+    private final PostSearchHistoryRepository postSearchHistoryRepository = Mockito.mock(PostSearchHistoryRepository.class);
     private final S3FileService s3FileService = Mockito.mock(S3FileService.class);
-    private final PostController postController = new PostController(postMapper, postRepository, postQueryRepository, postQueryForMemberRepository, multipartDataProcessorPort, postViewCountRepository,postViewLockRepository,postArchiveRepository, postRecentlyViewRepository,s3FileService);
+    private final PostController postController = new PostController(postMapper, postRepository, postQueryRepository, postQueryForMemberRepository, multipartDataProcessorPort, postViewCountRepository,postViewLockRepository,postArchiveRepository, postRecentlyViewRepository,postSearchHistoryRepository,s3FileService);
 
     @BeforeEach
     void setUp() {
@@ -72,47 +85,58 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         List<PostSummaryReadModel> readModels = List.of(TEST_POST_SUMMARY_READ_MODEL);
 
         given(postQueryRepository.findByCategoryWithCursor(testPrimaryCategoryId.getValue(), List.of(testSecondaryCategoryId.getValue()), memberUuid, ulid, size)).willReturn(readModels);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        CursorPageResponse<PostSummaryResponse> result = postController.getAll(categoryRequest, memberUuid, ulid, size);
+        CursorLatestSortedPageResponse<PostSummaryResponse> result = postController.getAll(categoryRequest, memberUuid, ulid, size);
 
         // then
         assertThat(result).isNotNull();
         assertThat(result.posts()).hasSize(1);
-        assertThat(result.posts().get(0).ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
+        assertThat(result.posts().getFirst().ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
         assertThat(result.nextUlid()).isNull();
         assertThat(result.hasNext()).isFalse();
 
         verify(postQueryRepository).findByCategoryWithCursor(testPrimaryCategoryId.getValue(), List.of(testSecondaryCategoryId.getValue()), memberUuid, ulid, size);
-        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_SUMMARY_READ_MODEL.content());
+        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_SUMMARY_READ_MODEL.content(),TEST_POST_SUMMARY_READ_MODEL.thumbnailPath());
     }
 
     @Test
-    @DisplayName("키워드로 발행된 게시글 조회")
-    void testGetByKeyword_givenKeywordAndCursor_willReturnCursorPageResponse() throws IOException {
+    @DisplayName("키워드로 발행된 게시글을 최신순으로 조회")
+    void testSearchByKeywordWithLatest_givenKeywordAndCursor_willReturnCursorPageResponse() throws IOException {
         // given
         String keyword = "벌레";
         UUID memberUuid = MEMBER_BASIC_USER_UUID;
         String ulid = TEST_POST_ULID;
         int size = 10;
-        List<PostSummaryReadModel> readModels = List.of(TEST_POST_SUMMARY_READ_MODEL);
+        List<PostSummaryWithSearchInfoReadModel> readModels = List.of(TEST_POST_SUMMARY_WITH_SEARCH_INFO_READ_MODEL_NULL);
+        PostSearchRequest searchRequest = new PostSearchRequest(
+                SearchOption.TITLE_CONTENT, keyword, SearchSort.LATEST,
+                new PostCategoryRequest(null, null));
 
-        given(postQueryRepository.findByKeywordWithCursor(keyword, memberUuid, ulid, size)).willReturn(readModels);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(postQueryRepository.searchByKeywordWithLatest(
+                SearchOption.TITLE_CONTENT, keyword, null,null,
+                memberUuid, ulid, TEST_COMM_POST_PUBLISHED_AT, size)).willReturn(readModels);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class), any(String.class)))
+                .willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        doNothing().when(postSearchHistoryRepository).saveSearchKeyword(any(UUID.class), any(String.class));
 
         // when
-        CursorPageResponse<PostSummaryResponse> result = postController.getByKeyword(keyword, memberUuid, ulid, size);
+        CursorRelevanceSortedPageResponse<PostSummaryWithSearchInfoResponse> result =
+                postController.getByKeyword(searchRequest, memberUuid, ulid,
+                        null, null, TEST_COMM_POST_PUBLISHED_AT, size);
 
         // then
         assertThat(result).isNotNull();
         assertThat(result.posts()).hasSize(1);
-        assertThat(result.posts().get(0).ulid()).isEqualTo(TEST_POST_SUMMARY_READ_MODEL.ulid());
+        assertThat(result.posts().getFirst().ulid()).isEqualTo(TEST_POST_ULID);
         assertThat(result.nextUlid()).isNull();
         assertThat(result.hasNext()).isFalse();
 
-        verify(postQueryRepository).findByKeywordWithCursor(keyword, memberUuid, ulid, size);
-        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_SUMMARY_READ_MODEL.content());
+        verify(postQueryRepository).searchByKeywordWithLatest(
+                SearchOption.TITLE_CONTENT, keyword, null,null,
+                memberUuid, ulid, TEST_COMM_POST_PUBLISHED_AT, size);
+        verify(multipartDataProcessorPort).convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY);
     }
 
     @Test
@@ -176,14 +200,16 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         // given
         given(postQueryRepository.findPostDetailDataByPostId(any(PostId.class))).willReturn(Optional.of(TEST_PUBLISHED_POST_DETAIL_DATA_READ_MODEL));
         given(multipartDataProcessorPort.convertFileSrcToFullFileSrc(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.extractOriginalFilenameFromFileKey(anyString())).willReturn(TEST_POST_CONTENT_THUMBNAIL_FILENAME);
 
         // when
-        PostDetailResponse result = postController.getDataByUlid(TEST_POST_ULID,MEMBER_BASIC_USER_UUID);
+        PostDetailDataResponse result = postController.getDataByUlid(TEST_POST_ULID,MEMBER_BASIC_USER_UUID);
 
         // then
         assertThat(result).isNotNull();
         verify(postQueryRepository).findPostDetailDataByPostId(any(PostId.class));
         verify(multipartDataProcessorPort).convertFileSrcToFullFileSrc(any(JsonNode.class));
+        verify(multipartDataProcessorPort).extractOriginalFilenameFromFileKey(anyString());
     }
 
     @Test
@@ -192,14 +218,16 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         // given
         given(postQueryRepository.findPostDetailDataByPostId(any(PostId.class))).willReturn(Optional.of(TEST_DRAFT_POST_DETAIL_DATA_READ_MODEL));
         given(multipartDataProcessorPort.convertFileSrcToFullFileSrc(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.extractOriginalFilenameFromFileKey(anyString())).willReturn(TEST_POST_CONTENT_THUMBNAIL_FILENAME);
 
         // when
-        PostDetailResponse result = postController.getDataByUlid(TEST_POST_ULID, MEMBER_BASIC_USER_UUID);
+        PostDetailDataResponse result = postController.getDataByUlid(TEST_POST_ULID, MEMBER_BASIC_USER_UUID);
 
         // then
         assertThat(result).isNotNull();
         verify(postQueryRepository).findPostDetailDataByPostId(any(PostId.class));
         verify(multipartDataProcessorPort).convertFileSrcToFullFileSrc(any(JsonNode.class));
+        verify(multipartDataProcessorPort).extractOriginalFilenameFromFileKey(anyString());
     }
 
     @Test
@@ -215,19 +243,37 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
                 .isInstanceOf(PostNotFoundException.class);
         verify(postQueryRepository).findPostDetailDataByPostId(any(PostId.class));
         verify(multipartDataProcessorPort, never()).convertFileSrcToFullFileSrc(any(JsonNode.class));
+        verify(multipartDataProcessorPort, never()).extractOriginalFilenameFromFileKey(anyString());
+    }
+
+    @Test
+    @DisplayName("작성자가 ULID로 빈 값을 가진 임시저장 게시글 데이터 조회하기")
+    void testGetDataByUlid_givenDraftPostAndAuthorWithEmptyValue_willReturnPostDetail() throws IOException {
+        // given
+        given(postQueryRepository.findPostDetailDataByPostId(any(PostId.class))).willReturn(Optional.of(TEST_DRAFT_POST_DETAIL_DATA_READ_MODEL_WITH_EMPTY_VALUE));
+        given(multipartDataProcessorPort.extractOriginalFilenameFromFileKey(null)).willReturn(null);
+
+        // when
+        PostDetailDataResponse result = postController.getDataByUlid(TEST_POST_ULID, MEMBER_BASIC_USER_UUID);
+
+        // then
+        assertThat(result).isNotNull();
+        verify(postQueryRepository).findPostDetailDataByPostId(any(PostId.class));
+        verify(multipartDataProcessorPort,never()).convertFileSrcToFullFileSrc(any(JsonNode.class));
+        verify(multipartDataProcessorPort).extractOriginalFilenameFromFileKey(null);
     }
 
     @Test
     @DisplayName("게시글 생성 및 발행")
     void testCreatePost_givenPublishedPostRequest_willCreatePost() throws IOException {
         // given
-        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList())).willReturn(TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class))).willReturn(new ContentProcessRecord(TEST_POST_CONTENT_TEXT_AND_IMAGE, TEST_POST_CONTENT_TEXT_AND_IMAGE_THUMBNAIL_KEY));
 
         // when
         postController.createPost(requestAllTypes, MEMBER_BASIC_USER_UUID);
 
         // then
-        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList());
+        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
         verify(postRepository).save(argThat(post ->
                 post.getAuthorId().getValue().equals(MEMBER_BASIC_USER_UUID) &&
                         post.getStatus().isPublished()
@@ -235,16 +281,16 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     }
 
     @Test
-    @DisplayName("게시글 생성 및 임시저장")
+    @DisplayName("게시글 임시저장")
     void testCreatePost_givenDraftPostRequest_willCreateDraftPost() throws IOException {
         // given
-        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList())).willReturn(TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class))).willReturn(new ContentProcessRecord(TEST_POST_CONTENT_TEXT_AND_IMAGE, TEST_POST_CONTENT_TEXT_AND_IMAGE_THUMBNAIL_KEY));
 
         // when
         postController.createPost(requestAllTypesDraft, MEMBER_BASIC_USER_UUID);
 
         // then
-        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList());
+        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
         verify(postRepository).save(argThat(post ->
                 post.getAuthorId().getValue().equals(MEMBER_BASIC_USER_UUID) &&
                         !post.getStatus().isPublished()
@@ -252,14 +298,39 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     }
 
     @Test
-    @DisplayName("게시글 수정")
-    void testUpdatePost_givenUpdateRequest_willUpdatePost() throws IOException {
+    @DisplayName("빈 값을 포함하여 게시글 임시저장")
+    void testCreatePost_givenDraftPostRequestWithEmptyValue_willCreateDraftPost() throws IOException {
+        // when
+        postController.createPost(requestWithEmptyValueDraft, MEMBER_BASIC_USER_UUID);
+
+        // then
+        verify(multipartDataProcessorPort,never()).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
+        verify(postRepository).save(argThat(post ->
+                post.getAuthorId().getValue().equals(MEMBER_BASIC_USER_UUID) &&
+                        !post.getStatus().isPublished()
+        ));
+    }
+
+    @Test
+    @DisplayName("게시글 제목과 내용 모두 포함하지 않고 게시글 임시저장 시 예외 발생")
+    void testCreatePost_givenDraftPostRequestWithEmptyTitleAndContent_willThrowException() throws IOException {
+        // given
+        PostInsertRequest invalidInsertRequest = new PostInsertRequest(TEST_COMM_PRIMARY_CATEGORY_ID, null, null, null, null, null,false);
+
+        // when & then
+        assertThrows(EmptyValueException.class, () -> postController.createPost(invalidInsertRequest, MEMBER_BASIC_USER_UUID));
+        verify(multipartDataProcessorPort,never()).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
+    }
+
+    @Test
+    @DisplayName("발행된 게시글 수정")
+    void testUpdatePost_givenPublishedUpdateRequest_willUpdatePublishedPost() throws IOException {
         // given
         Post existingPost = createPublishedPost2();
 
         given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
         willDoNothing().given(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
-        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList())).willReturn(TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class))).willReturn(new ContentProcessRecord(TEST_POST_CONTENT_TEXT_AND_IMAGE, TEST_POST_CONTENT_TEXT_AND_IMAGE_THUMBNAIL_KEY));
 
         // when
         postController.updatePost(updateRequestAllTypes, MEMBER_BASIC_USER_UUID);
@@ -267,8 +338,81 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         // then
         verify(postRepository).getPostByUlid(any(PostId.class));
         verify(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
-        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList());
+        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
         verify(postRepository).update(any(Post.class));
+    }
+
+    @Test
+    @DisplayName("임시저장된 게시글 수정하여 발행")
+    void testUpdatePost_givenDraftUpdateRequest_willUpdatePublishedPost() throws IOException {
+        // given
+        Post existingPost = createDraftPost2();
+
+        given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
+        willDoNothing().given(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class))).willReturn(new ContentProcessRecord(TEST_POST_CONTENT_TEXT_AND_IMAGE, TEST_POST_CONTENT_TEXT_AND_IMAGE_THUMBNAIL_KEY));
+
+        // when
+        postController.updatePost(updateRequestAllTypes, MEMBER_BASIC_USER_UUID);
+
+        // then
+        verify(postRepository).getPostByUlid(any(PostId.class));
+        verify(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
+        verify(postRepository).update(any(Post.class));
+    }
+
+    @Test
+    @DisplayName("임시저장된 게시글 수정하여 임시저장")
+    void testUpdatePost_givenDraftUpdateRequest_willUpdateDraftPost() throws IOException {
+        // given
+        Post existingPost = createDraftPost2();
+
+        given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
+        willDoNothing().given(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        given(multipartDataProcessorPort.saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class))).willReturn(new ContentProcessRecord(TEST_POST_CONTENT_TEXT_AND_IMAGE, TEST_POST_CONTENT_TEXT_AND_IMAGE_THUMBNAIL_KEY));
+
+        // when
+        postController.updatePost(updateRequestAllTypesDraft, MEMBER_BASIC_USER_UUID);
+
+        // then
+        verify(postRepository).getPostByUlid(any(PostId.class));
+        verify(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        verify(multipartDataProcessorPort).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
+        verify(postRepository).update(any(Post.class));
+    }
+
+    @Test
+    @DisplayName("임시저장된 게시글 수정하여 빈값으로 수정하여 임시저장")
+    void testUpdatePost_givenDraftUpdateRequestWithEmptyValue_willUpdateDraftPost() throws IOException {
+        // given
+        Post existingPost = createDraftPost2();
+
+        given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
+        willDoNothing().given(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+
+        // when
+        postController.updatePost(updateRequestWithEmptyValueDraft, MEMBER_BASIC_USER_UUID);
+
+        // then
+        verify(postRepository).getPostByUlid(any(PostId.class));
+        verify(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        verify(multipartDataProcessorPort,never()).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
+        verify(postRepository).update(any(Post.class));
+    }
+
+    @Test
+    @DisplayName("게시글 제목과 내용 모두 포함하지 않고 게시글 임시저장 시 예외 발생")
+    void testUpdatePost_givenDraftPostRequestWithEmptyTitleAndContent_willThrowException() throws IOException {
+        // given
+        Post existingPost = createDraftPost2();
+        PostUpdateRequest invalidUpdateRequest = new PostUpdateRequest(TEST_POST_ULID, TEST_COMM_PRIMARY_CATEGORY_ID, null, null, null, null, null,false);
+        given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
+        willDoNothing().given(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+
+        // when & then
+        assertThrows(EmptyValueException.class, () -> postController.updatePost(invalidUpdateRequest, MEMBER_BASIC_USER_UUID));
+        verify(multipartDataProcessorPort,never()).saveFilesAndGenerateContentJson(anyList(),anyList(),any(String.class));
     }
 
     @Test
@@ -318,6 +462,29 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         verify(postRepository, never()).deletePostBookmarkByPostId(any(PostId.class));
         verify(postRepository, never()).deletePostRecentlyViewRecordByPostId(any(PostId.class));
         verify(multipartDataProcessorPort).deleteFiles(any(JsonNode.class));
+        verify(postRepository).delete(any(Post.class));
+    }
+
+    @Test
+    @DisplayName("빈 값이 포함된 임시저장 게시글은 아카이브 없이 삭제")
+    void testDeletePost_givenDraftPostWithEmptyValue_willDeleteWithoutArchive() {
+        // given
+        Post existingPost = createDraftPostWithEmptyValue2();
+
+        given(postRepository.getPostByUlid(any(PostId.class))).willReturn(Optional.of(existingPost));
+        willDoNothing().given(multipartDataProcessorPort).deleteFiles(null);
+        willDoNothing().given(postRepository).delete(any(Post.class));
+
+        // when
+        postController.deletePost(TEST_POST_ULID, MEMBER_BASIC_USER_UUID);
+
+        // then
+        verify(postRepository).getPostByUlid(any(PostId.class));
+        verify(postArchiveRepository, never()).save(any(PostId.class));
+        verify(postRepository, never()).deletePostLikeByPostId(any(PostId.class));
+        verify(postRepository, never()).deletePostBookmarkByPostId(any(PostId.class));
+        verify(postRepository, never()).deletePostRecentlyViewRecordByPostId(any(PostId.class));
+        verify(multipartDataProcessorPort).deleteFiles(null);
         verify(postRepository).delete(any(Post.class));
     }
 
@@ -444,7 +611,6 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
     @DisplayName("회원 ID와 게스트 ID 모두 주어지지 않았을 때 기존 조회수 반환")
     void testIncreaseViewCount_givenUlid_willReturnCurrentViewCount() {
         // given
-        long ttl = 10L;
         Long currentViewCount = 100L;
 
         given(postViewCountRepository.read(any(PostId.class))).willReturn(currentViewCount);
@@ -465,13 +631,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
 
-        given(postQueryForMemberRepository.findPublishedByAuthMemberWithOffset(any(AuthorId.class), eq(page-1), eq(size))).willReturn(readModelPage);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(postQueryForMemberRepository.findPublishedByAuthMemberWithOffset(any(AuthorId.class), eq(0), eq(size))).willReturn(readModelPage);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
 
         // then
         assertThat(result).isNotNull();
@@ -482,8 +648,8 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findPublishedByAuthMemberWithOffset(any(AuthorId.class),eq(page-1),eq(size));
-        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class));
+        verify(postQueryForMemberRepository).findPublishedByAuthMemberWithOffset(any(AuthorId.class),eq(0),eq(size));
+        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
     @Test
@@ -493,13 +659,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<DraftPostReadModel> readModelPage = new PageImpl<>(List.of(TEST_DRAFT_POST_READ_MODEL), PageRequest.of(page-1,size),totalElements);
+        Page<DraftPostReadModel> readModelPage = new PageImpl<>(List.of(TEST_DRAFT_POST_READ_MODEL), PageRequest.of(0,size),totalElements);
 
-        given(postQueryForMemberRepository.findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(page-1),eq(size))).willReturn(readModelPage);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(postQueryForMemberRepository.findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(0),eq(size))).willReturn(readModelPage);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<DraftPostResponse> result = postController.getDraftByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
+        OffsetPageResponse<DraftPostResponse> result = postController.getDraftByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
 
         // then
         assertThat(result).isNotNull();
@@ -511,8 +677,8 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
 
-        verify(postQueryForMemberRepository).findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(page-1),eq(size));
-        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class));
+        verify(postQueryForMemberRepository).findDraftByAuthMemberWithOffset(any(AuthorId.class), eq(0),eq(size));
+        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
     @Test
@@ -523,11 +689,11 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
 
-        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size)).willReturn(List.of());
+        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size)).willReturn(List.of());
         given(postRecentlyViewRepository.getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID)).willReturn(totalElements);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
 
         // then
         assertThat(result.posts()).isEmpty();
@@ -535,7 +701,7 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.page()).isEqualTo(page);
         assertThat(result.size()).isEqualTo(size);
 
-        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID,  page-1, size);
+        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size);
         verify(postRecentlyViewRepository).getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID);
         verify(postQueryForMemberRepository, never()).findByIds(anyList(), any(UUID.class));
     }
@@ -550,15 +716,14 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int size = 5;
 
         List<PostSummaryReadModel> postModels = List.of(TEST_POST_SUMMARY_READ_MODEL, TEST_POST_SUMMARY_READ_MODEL2);
-        List<PostSummaryResponse> postResponses = List.of(TEST_POST_SUMMARY_RESPONSE,TEST_POST_SUMMARY_RESPONSE2);
 
-        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size)).willReturn(postIds);
+        given(postRecentlyViewRepository.getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size)).willReturn(postIds);
         given(postRecentlyViewRepository.getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID)).willReturn(totalElements);
         given(postQueryForMemberRepository.findByIds(postIds, MEMBER_BASIC_USER_UUID)).willReturn(postModels);
-        given(multipartDataProcessorPort.convertToPreview(TEST_POST_CONTENT)).willReturn((ArrayNode) TEST_POST_CONTENT_PREVIEW);
+        given(multipartDataProcessorPort.convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY)).willReturn((ArrayNode) TEST_POST_CONTENT_PREVIEW);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, page-1, size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getRecentlyViewByMemberUuid(MEMBER_BASIC_USER_UUID, 0, size);
 
         // then
         assertThat(result.posts()).hasSize(2);
@@ -567,10 +732,10 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.page()).isEqualTo(page);
         assertThat(result.size()).isEqualTo(size);
 
-        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, page-1, size);
+        verify(postRecentlyViewRepository).getRecentlyViewPostIds(MEMBER_BASIC_USER_UUID, 0, size);
         verify(postRecentlyViewRepository).getTotalRecentlyViewPosts(MEMBER_BASIC_USER_UUID);
         verify(postQueryForMemberRepository).findByIds(postIds, MEMBER_BASIC_USER_UUID);
-        verify(multipartDataProcessorPort,times(2)).convertToPreview(TEST_POST_CONTENT);
+        verify(multipartDataProcessorPort,times(2)).convertToPreview(TEST_POST_CONTENT, TEST_POST_CONTENT_THUMBNAIL_KEY);
     }
 
     @Test
@@ -580,13 +745,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
 
-        given(postQueryForMemberRepository.findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(page-1), eq(size))).willReturn(readModelPage);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(postQueryForMemberRepository.findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(0), eq(size))).willReturn(readModelPage);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getLikedByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getLikedByMemberUuid(MEMBER_BASIC_USER_UUID, 0,size);
 
         // then
         assertThat(result).isNotNull();
@@ -597,8 +762,8 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(page-1),eq(size));
-        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class));
+        verify(postQueryForMemberRepository).findLikedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(0),eq(size));
+        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
     @Test
@@ -608,13 +773,13 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         int page = 1;
         int size = 5;
         long totalElements = 1;
-        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(page-1,size),totalElements);
+        Page<PostSummaryReadModel> readModelPage = new PageImpl<>(List.of(TEST_POST_SUMMARY_READ_MODEL), PageRequest.of(0,size),totalElements);
 
-        given(postQueryForMemberRepository.findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(page-1), eq(size))).willReturn(readModelPage);
-        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
+        given(postQueryForMemberRepository.findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID), eq(0), eq(size))).willReturn(readModelPage);
+        given(multipartDataProcessorPort.convertToPreview(any(JsonNode.class),any(String.class))).willReturn((ArrayNode) TEST_POST_CONTENT_TEXT_AND_IMAGE);
 
         // when
-        OffsetPageResponse<PostSummaryResponse> result = postController.getBookmarkedByMemberUuid(MEMBER_BASIC_USER_UUID,page-1,size);
+        OffsetPageResponse<PostSummaryResponse> result = postController.getBookmarkedByMemberUuid(MEMBER_BASIC_USER_UUID, 0,size);
 
         // then
         assertThat(result).isNotNull();
@@ -625,8 +790,8 @@ class PostControllerTest implements PostTestUtils, PostReadModelTestUtils, PostR
         assertThat(result.totalPages()).isEqualTo(1);
         assertThat(result.hasNext()).isFalse();
         assertThat(result.hasPrevious()).isFalse();
-        verify(postQueryForMemberRepository).findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(page-1),eq(size));
-        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class));
+        verify(postQueryForMemberRepository).findBookmarkedByMemberWithOffset(eq(MEMBER_BASIC_USER_UUID),eq(0),eq(size));
+        verify(multipartDataProcessorPort).convertToPreview(any(JsonNode.class),any(String.class));
     }
 
 }
